# compressed_collections

./: Cargo.toml  README.md
src/: compression.rs  deque.rs  lib.rs  stack.rs
src/cvec/: cache.rs  inner.rs  iterator.rs  mod.rs
tests/: integration_test.rs
